...
        android:textColor="@android:color/holo_green_dark"
        android:textSize="25dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/medicSaveBtn"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/greeting"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="219dp"
        android:layout_marginTop="514dp"
        android:backgroundTint="#4CAF50"
        android:text="Save medication"
        android:textSize="19dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="358dp"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
...
        android:layout_marginTop="431dp"
        android:backgroundTint="#4CAF50"
        android:text="Create reminder"
        android:textSize="20dp" />

    <Button
        android:id="@+id/healthBtn"
        android:layout_width="169dp"
        android:layout_height="88dp"
        android:layout_below="@+id/greeting"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="212dp"
        android:layout_marginTop="318dp"
        android:backgroundTint="#4CAF50"
        android:text="Save diagnosis"
        android:textSize="20dp" />

    <!--The alarm maker and the email and message creator links are added to the home page for easier navigation and accessibility-->
    <Button
        android:id="@+id/contactBtn"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/greeting"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="217dp"
        android:layout_marginTop="429dp"
        android:backgroundTint="#4CAF50"
        android:text="Add a contact"
        android:textSize="20dp" />

    <Button
        android:id="@+id/profileBtn"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
...
