...
    android:padding="17dp"
    tools:context="com.example.medsupapp.ContactDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleSquare"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pageTitle"
...
            android:textSize="26sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <ImageButton
            android:id="@+id/saveNoteButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/save"
...
        android:background="#FFFFFF"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/conTitle"
            android:hint="Enter title"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/conInfo"
            android:hint="Enter content"
            android:textSize="20dp"
            android:gravity="start"
            android:minLines="15"
            android:padding="12dp"
            android:textStyle="bold"
...
