...
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:id="@+id/titleDesc"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/userEmail"
                android:backgroundTint="#C6C1C1"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="Email Address"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/userPassword"
                android:backgroundTint="#C6C1C1"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
            <!--When you click the Login button, the database will look for the user in the user table and will grant access to said user if found or if not will prompt users to check their credentials-->
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Login"
                android:id="@+id/login_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#8BC34A"
                app:cornerRadius = "20dp"/>

            <!--If a user is using MedsUpApp for the first time, they can click this TextView button to register a new account-->
...
